HTML table was added.

--- a/Lesson_20/dz_20.ipynb
+++ b/Lesson_20/dz_20.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "### Task 1\n",
+    "#### Markdown Table\n",
     "| Year | Rank | Company               | Revenue| Profit |\n",
     "| :---:|:----:| :---                  |   ---: | ---:   | \n",
     "|1955  | 229  | Norton                | 135.0  | N.A.   |\n",
@@ -13,6 +14,150 @@
     "|1955  | 295  | Pacific Vegetable Oil | 97.9   | N.A.   |  \n",
     "|1955  | 297  | Leibmann Breweries    | 96.0   | N.A.   |  \n",
     "|1955  | 353  | Minneapolis-Moline    | 77.4   | N.A.   |  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21121288",
+   "metadata": {},
+   "source": [
+    "#### HTML Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f871db93",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<!DOCTYPE html>\n",
+       "<html lang=\"en\">\n",
+       "<head>\n",
+       "    <meta charset=\"UTF-8\">\n",
+       "    <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\">\n",
+       "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">   \n",
+       "</head>\n",
+       "<body>\n",
+       "   <table>\n",
+       "        <thead>\n",
+       "            <th style=\"border:1px solid black; text-align:center; width:50px\">Year</th>\n",
+       "            <th style=\"border:1px solid black; text-align:center; width:50px\">Rank</th>\n",
+       "            <th style=\"border:1px solid black; text-align:center\">Company</th>\n",
+       "            <th style=\"border:1px solid black; text-align:center; width:60px\">Revenue</th>\n",
+       "            <th style=\"border:1px solid black; text-align:center\">Profit</th>\n",
+       "        </thead>\n",
+       "        <tbody>\n",
+       "            <tr>\n",
+       "                <td style=\"border:1px solid black; text-align:center; width:50px\">1955</td>\n",
+       "                <td style=\"border:1px solid black; text-align:center; width:50px\">229</td>\n",
+       "                <td style=\"text-align:left; border:1px solid black;\">Norton</td>\n",
+       "                <td style=\"border:1px solid black; width:60px\">135.0</td>\n",
+       "                <td style=\"border:1px solid black; text-align:center\">N.A.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td style=\"border:1px solid black; text-align:center; width:50px\">1955</td>\n",
+       "                <td style=\"border:1px solid black; text-align:center; width:50px\">291</td>\n",
+       "                <td style=\"text-align:left; border:1px solid black\">Shlitz Brewing</td>\n",
+       "                <td style=\"border:1px solid black; width:60px\">100.0</td>\n",
+       "                <td style=\"border:1px solid black; text-align:center\">N.A.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td style=\"border:1px solid black; text-align:center; width:50px\">1955</td>\n",
+       "                <td style=\"border:1px solid black; text-align:center; width:50px\">295</td>\n",
+       "                <td style=\"text-align:left; border:1px solid black\">Pacific Vegetable Oil</td>\n",
+       "                <td style=\"border:1px solid black; width:60px\">97.9</td>\n",
+       "                <td style=\"border:1px solid black; text-align:center\">N.A.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td style=\"border:1px solid black; text-align:center; width:50px\">1955</td>\n",
+       "                <td style=\"border:1px solid black; text-align:center; width:50px\">297</td>\n",
+       "                <td style=\"text-align:left; border:1px solid black\">Leibmann Breweries</td>\n",
+       "                <td style=\"border:1px solid black; width:60px\">96.0</td>\n",
+       "                <td style=\"border:1px solid black; text-align:center\">N.A.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                <td style=\"border:1px solid black; text-align:center; width:50px\">1955</td>\n",
+       "                <td style=\"border:1px solid black; text-align:center; width:50px\">353</td>\n",
+       "                <td style=\"text-align:left; border:1px solid black\">Minneapolis-Moline</td>\n",
+       "                <td style=\"border:1px solid black; width:60px\">77.4</td>\n",
+       "                <td style=\"border:1px solid black; text-align:center\">N.A.</td>\n",
+       "            </tr>\n",
+       "        </tbody>\n",
+       "   </table> \n",
+       "</body>\n",
+       "</html>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<!DOCTYPE html>\n",
+    "<html lang=\"en\">\n",
+    "<head>\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\">\n",
+    "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">   \n",
+    "</head>\n",
+    "<body>\n",
+    "   <table>\n",
+    "        <thead>\n",
+    "            <th style=\"border:1px solid black; text-align:center; width:50px\">Year</th>\n",
+    "            <th style=\"border:1px solid black; text-align:center; width:50px\">Rank</th>\n",
+    "            <th style=\"border:1px solid black; text-align:center\">Company</th>\n",
+    "            <th style=\"border:1px solid black; text-align:center; width:60px\">Revenue</th>\n",
+    "            <th style=\"border:1px solid black; text-align:center\">Profit</th>\n",
+    "        </thead>\n",
+    "        <tbody>\n",
+    "            <tr>\n",
+    "                <td style=\"border:1px solid black; text-align:center; width:50px\">1955</td>\n",
+    "                <td style=\"border:1px solid black; text-align:center; width:50px\">229</td>\n",
+    "                <td style=\"text-align:left; border:1px solid black;\">Norton</td>\n",
+    "                <td style=\"border:1px solid black; width:60px\">135.0</td>\n",
+    "                <td style=\"border:1px solid black; text-align:center\">N.A.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"border:1px solid black; text-align:center; width:50px\">1955</td>\n",
+    "                <td style=\"border:1px solid black; text-align:center; width:50px\">291</td>\n",
+    "                <td style=\"text-align:left; border:1px solid black\">Shlitz Brewing</td>\n",
+    "                <td style=\"border:1px solid black; width:60px\">100.0</td>\n",
+    "                <td style=\"border:1px solid black; text-align:center\">N.A.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"border:1px solid black; text-align:center; width:50px\">1955</td>\n",
+    "                <td style=\"border:1px solid black; text-align:center; width:50px\">295</td>\n",
+    "                <td style=\"text-align:left; border:1px solid black\">Pacific Vegetable Oil</td>\n",
+    "                <td style=\"border:1px solid black; width:60px\">97.9</td>\n",
+    "                <td style=\"border:1px solid black; text-align:center\">N.A.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"border:1px solid black; text-align:center; width:50px\">1955</td>\n",
+    "                <td style=\"border:1px solid black; text-align:center; width:50px\">297</td>\n",
+    "                <td style=\"text-align:left; border:1px solid black\">Leibmann Breweries</td>\n",
+    "                <td style=\"border:1px solid black; width:60px\">96.0</td>\n",
+    "                <td style=\"border:1px solid black; text-align:center\">N.A.</td>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"border:1px solid black; text-align:center; width:50px\">1955</td>\n",
+    "                <td style=\"border:1px solid black; text-align:center; width:50px\">353</td>\n",
+    "                <td style=\"text-align:left; border:1px solid black\">Minneapolis-Moline</td>\n",
+    "                <td style=\"border:1px solid black; width:60px\">77.4</td>\n",
+    "                <td style=\"border:1px solid black; text-align:center\">N.A.</td>\n",
+    "            </tr>\n",
+    "        </tbody>\n",
+    "   </table> \n",
+    "</body>\n",
+    "</html>"
    ]
   },
   {
@@ -104,7 +249,7 @@
    "execution_count": 18,
    "id": "36ec0946",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
