Other methods for sort and results was added.

--- a/Lesson_20/dz_20.ipynb
+++ b/Lesson_20/dz_20.ipynb
@@ -170,13 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "ca88e13c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random, time\n",
-    "from random_word import RandomWords\n",
+    "from random_words import RandomWords\n",
     "\n",
     "r = RandomWords()\n",
     "int_list = []\n",
@@ -186,7 +186,7 @@
     "for i in range(0, 5000):\n",
     "    int_list.append(random.randint(0, 1000))\n",
     "    float_list.append(random.uniform(0.1, 100.0))\n",
-    "    str_list.append(r.get_random_word())    \n",
+    "    str_list.append(r.random_word())    \n",
     "\n",
     "\n",
     "class SortAlgorithms:\n",
@@ -245,24 +245,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "29ed6111",
+   "metadata": {},
+   "source": [
+    "#### Пірамідальне сортування"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "36ec0946",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19.1 ms ± 89.7 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "20 ms ± 595 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
     "SortAlgorithms.heap_sort(str_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3057a0ec",
+   "metadata": {},
+   "source": [
+    "#### Сортування вставкою"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "acd398c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "507 µs ± 18.5 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "SortAlgorithms.insertion_sort(str_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "155cd63e",
+   "metadata": {},
+   "source": [
+    "#### Вибiркове сортування "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a5d7573d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "560 ms ± 16.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "SortAlgorithms.selection_sort(str_list)"
    ]
   }
  ],
