Formula was corrected.

--- a/Lesson_25/dz_25.ipynb
+++ b/Lesson_25/dz_25.ipynb
@@ -19,7 +19,7 @@
     "Тоді Y - подія появи бракованих деталей, трапляється з ймовірністю q = 1 - 0,6 = 0,4.  \n",
     "Ймовірність появи із n деталей k стандартних буде рахуватись за формулою:    \n",
     "\n",
-    "$$ C_n^k = \\frac{n!}{k!(n-k)!} p^xq^y$$  \n",
+    "$$ x_iy_j = C_n^k p^xq^y= \\frac{n!}{k!(n-k)!} p^xq^y$$  \n",
     "\n",
     "Тоді закон розподілу можна представити в вигляді наступної таблиці:\n",
     "\n",
