X & Y was exchanged, task 1 answer was corrected.

--- a/Lesson_25/dz_25.ipynb
+++ b/Lesson_25/dz_25.ipynb
@@ -15,8 +15,8 @@
    "id": "224c01bb",
    "metadata": {},
    "source": [
-    "Хай Х - подія появи стандарних деталей, яка трапляється з ймовірністю p = 0,6,  \n",
-    "а Y - подія появи бракованих деталей, трапляється з ймовірністю q = 1 - 0,6 = 0,4.  \n",
+    "Хай Y - подія появи стандарних деталей, яка трапляється з ймовірністю p = 0,6,  \n",
+    "а X - подія появи бракованих деталей, трапляється з ймовірністю q = 1 - 0,6 = 0,4.  \n",
     "Ймовірність появи із n деталей k стандартних буде рахуватись за формулою:    \n",
     "\n",
     "$$ x_iy_j = C_n^k p^xq^y= \\frac{n!}{k!(n-k)!} p^xq^y$$  \n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d43947bc",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "85f9a399",
    "metadata": {},
    "outputs": [
@@ -54,8 +54,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Математичне очікування появи стандартної деталі Х дорівнює: 1.8. Дисперсія: 0.72. Стандарте відхилення: 0.8485\n",
-      "Математичне очікування появи бракованої деталі Y дорівнює: 1.2. Дисперсія: 0.72. Стандарте відхилення: 0.8485\n",
+      "Математичне очікування появи бракованої деталі Х дорівнює: 1.2. Дисперсія: 0.72. Стандарте відхилення: 0.8485\n",
+      "Математичне очікування появи стандартної деталі Y дорівнює: 1.8. Дисперсія: 0.72. Стандарте відхилення: 0.8485\n",
       "Математичне очікування добутку XY дорівнює 1.44\n",
       "Коефіціент коваріації дорівнює -0.72\n",
       "Коефіціент кореляції дорівнює -1\n"
@@ -70,19 +70,19 @@
     "               [0, 0.432, 0, 0],\n",
     "               [0.216, 0, 0, 0]])\n",
     "\n",
-    "PX = [round(sum(PXY[i]), 3) for i in range(len(PXY))]\n",
-    "PY = [round(sum(PXY[:, i]), 3) for i in range(len(PXY[0]))]   \n",
+    "PY = [round(sum(PXY[i]), 3) for i in range(len(PXY))]\n",
+    "PX = [round(sum(PXY[:, i]), 3) for i in range(len(PXY[0]))]   \n",
     "\n",
     "MX = sum(X*PX)              # Математичне очікування\n",
     "DX = sum(X**2*PX) - MX**2   # Дисперсія\n",
     "sX = DX**0.5                # Стандартне відхилення\n",
-    "print(f'Математичне очікування появи стандартної деталі Х дорівнює: {round(MX,2)}. Дисперсія: {round(DX,4)}. '+ \n",
+    "print(f'Математичне очікування появи бракованої деталі Х дорівнює: {round(MX,2)}. Дисперсія: {round(DX,4)}. '+ \n",
     "      f'Стандарте відхилення: {round(sX, 4)}')\n",
     "\n",
     "MY = sum(Y*PY)              # Математичне очікування\n",
     "DY = sum(Y**2*PY) - MY**2   # Дисперсія\n",
     "sY = DY**0.5                # Стандартне відхилення\n",
-    "print(f'Математичне очікування появи бракованої деталі Y дорівнює: {round(MY,2)}. Дисперсія: {round(DY,4)}. '+ \n",
+    "print(f'Математичне очікування появи стандартної деталі Y дорівнює: {round(MY,2)}. Дисперсія: {round(DY,4)}. '+ \n",
     "      f'Стандарте відхилення: {round(sY, 4)}')\n",
     "\n",
     "M_XY = 0  \n",
@@ -225,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
