--- a/Lesson_26/dz_26_1.ipynb
+++ b/Lesson_26/dz_26_1.ipynb
@@ -21,48 +21,17 @@
    "id": "088f19a8",
    "metadata": {},
    "source": [
-    "Якщо загальна кількість телевізорів 100 шт., то математичне сподівання буде дорівнювати М(Х) = 100 х 0,9 = **90**  \n",
-    "Дисперсія буде дорівнювати D(X) = 100^2 x 0,9 - 90^2 = **900**  \n",
-    "e = 95 - 90 = 90 - 95 = **5**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "cfd013c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Математичне очікування появи бракованої деталі Х дорівнює: 90.0. Дисперсія: 900.0. Стандарте відхилення: 30.0\n",
-      "Математичне очікування появи стандартної деталі Y дорівнює: 10.0. Дисперсія: 900.0. Стандарте відхилення: 30.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
+    "Дискретна випадкова величина Х має біноміальний розподіл, тоді математичне сподівання буде дорівнювати М(Х) = 100 х 0,9 = **90**  \n",
+    "Дисперсія буде дорівнювати D(X) = 100 x 0,9 х (1 - 0,9) = **9**  \n",
+    "Для оцінки ймовірності того, що випадкова величина прийме значення в певному діапазоні використаємо нерівність Чебишева:  \n",
+    "$$ P(|X-M(X)| \\leq \\epsilon) \\geq 1 - \\frac{D(X)}{\\epsilon^2}  $$\n",
+    "Відхилення e = |95 - 90| = |85 - 90| = **5**  \n",
+    "Тоді  \n",
+    "Р(|Х - 90| <= 5) <= 1 - (9/5^2)  \n",
+    "P(|X - 90|) <= **0.64**\n",
     "\n",
-    "X = np.array([0, 100])\n",
-    "Y = np.array([0, 100])\n",
-    "PXY= np.array([[0, 0.9],\n",
-    "               [0.1, 0]])\n",
-    "\n",
-    "PY = [round(sum(PXY[i]), 3) for i in range(len(PXY))]\n",
-    "PX = [round(sum(PXY[:, i]), 3) for i in range(len(PXY[0]))]   \n",
-    "\n",
-    "MX = sum(X*PX)              # Математичне очікування\n",
-    "DX = sum(X**2*PX) - MX**2   # Дисперсія\n",
-    "sX = DX**0.5                # Стандартне відхилення\n",
-    "print(f'Математичне очікування появи бракованої деталі Х дорівнює: {round(MX,2)}. Дисперсія: {round(DX,4)}. '+ \n",
-    "      f'Стандарте відхилення: {round(sX, 4)}')\n",
-    "\n",
-    "MY = sum(Y*PY)              # Математичне очікування\n",
-    "DY = sum(Y**2*PY) - MY**2   # Дисперсія\n",
-    "sY = DY**0.5                # Стандартне відхилення\n",
-    "print(f'Математичне очікування появи стандартної деталі Y дорівнює: {round(MY,2)}. Дисперсія: {round(DY,4)}. '+ \n",
-    "      f'Стандарте відхилення: {round(sY, 4)}')\n"
+    "Тобто, ймовірність того що число телевізорів які витримають гарантійний термін буде знаходиттись в межах від 85 до 95 буде більше, або дорівнювати **0.64**\n",
+    "\n"
    ]
   }
  ],
