dz_28_1 was corrected a bit.

--- a/Lesson_28/dz_28_1.ipynb
+++ b/Lesson_28/dz_28_1.ipynb
@@ -25,13 +25,13 @@
     "А також дисперсія, яка розраховується за формулою:  \n",
     "$$ D = \\frac{\\sum_{i=1}^{k} n_i(x_i - \\overline X)^2}{N} $$   \n",
     "i стандартне відхилення:  $\\sigma = \\sqrt{D}$,   \n",
-    "де k - кількість варіант, N - загальна кількість подій, тобто 20.  \n",
+    "де k - кількість варіант, N - об'єм вибірки, тобто 20.  \n",
     "Щоб розрахувати довірчий інтервал з надійністю 95% нам потрібно взяти відхилення $ 1.96*\\sigma/\\sqrt{N}$ в обидві сторони від  виборочного середнього значення. Коефіціент 1.96 отримуємо з таблиці Лапласа для заданої точності.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "d21b12ac",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
       "Виборочне середнє значення дорівнює: 4.0\n",
       "Дисперсія дорівнює: 3.0\n",
       "Середнє квадратичне відхилення дорівнює: 1.7321\n",
-      "Довірчий інтервал для цільової вибірки: [3.24, 4.76]\n"
+      "Довірчий інтервал, отриманий на основі виборки: [3.24, 4.76]\n"
      ]
     }
    ],
@@ -51,18 +51,31 @@
     "x = np.array([1, 2, 4, 6, 7])\n",
     "n = np.array([2, 3, 10, 3, 2])\n",
     "N = sum(n)\n",
-    "X = sum(x*n)/sum(n) # Виборочне середнє\n",
     "\n",
-    "p = [n[i]*(x[i] - X)**2 for i in range(len(x))]\n",
-    "D = sum([n[i]*(x[i] - X)**2 for i in range(len(x))])/N # Дисперсія\n",
-    "sd = round(D**0.5, 4)   # Стандартне відхилення\n",
-    "x_range = [round(X - 1.96*sd/N**0.5, 2), round(X + 1.96*sd/N**0.5, 2)]\n",
+    "# Виборочне середнє\n",
+    "X = sum(x*n)/N \n",
+    "\n",
+    "# Дисперсія\n",
+    "D = sum([n[i]*(x[i] - X)**2 for i in range(len(x))])/N\n",
+    "\n",
+    "# Стандартне відхилення\n",
+    "sd = round(D**0.5, 4)\n",
+    "\n",
+    "# Довірчий інтервал\n",
+    "x_range = [round(X - 1.96*sd/N**0.5, 2), round(X + 1.96*sd/N**0.5, 2)] \n",
     "\n",
     "print(f'Виборочне середнє значення дорівнює: {X}')\n",
     "print(f\"Дисперсія дорівнює: {D}\")\n",
     "print(f'Середнє квадратичне відхилення дорівнює: {sd}') \n",
-    "print(f'Довірчий інтервал для цільової вибірки: {x_range}')\n",
-    "\n"
+    "print(f'Довірчий інтервал, отриманий на основі виборки: {x_range}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d9ecee8",
+   "metadata": {},
+   "source": [
+    "**Висновок:** Середнє значення генеральної сукупності з ймовірністю 95% належить інтервалу [3.24, 4.76]."
    ]
   }
  ],
