--- a/Lesson_28/dz_28_2.ipynb
+++ b/Lesson_28/dz_28_2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3428be6",
+   "id": "20666424",
    "metadata": {},
    "source": [
     "Для оцінки з надійністю γ ймовірності настання події А в кожному із n незалежних випробувань, якщо подія А відбулась m раз, використовують довірчий інтервал: p1 < p < p2, де    \n",
@@ -23,15 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "2f29e612",
+   "execution_count": 39,
+   "id": "16b4b05a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Інтервальна оцінка настання події А: (0.31 : 0.5)\n"
+      "Інтервальна оцінка ймовірності настання події А: (0.31 : 0.5)\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
     "p1 = 1/(t**2 + n)*((m + (t**2)/2) - t*((m*(n - m)/n) + (t**2)/4)**0.5)\n",
     "p2 = 1/(t**2 + n)*((m + (t**2)/2) + t*((m*(n - m)/n) + (t**2)/4)**0.5)\n",
     "\n",
-    "print(f\"Інтервальна оцінка настання події А: ({round(p1, 2)} : {round(p2, 2)})\")\n"
+    "print(f\"Інтервальна оцінка ймовірності настання події А: ({round(p1, 2)} : {round(p2, 2)})\")\n"
    ]
   }
  ],
