dz_28_1.ipynb was corrected.

--- a/Lesson_28/dz_28_1.ipynb
+++ b/Lesson_28/dz_28_1.ipynb
@@ -12,7 +12,7 @@
     "|-:|--:|--:|--:|--:|--:|\n",
     "|ni| 2 | 3 |10 | 3 | 2 |\n",
     "\n",
-    "Знайти з надійністю у = 0,95 інтервальну оцінку для середнього квадратичного відхилення о генеральної сукупності.\n"
+    "Знайти з надійністю у = 0,95 інтервальну оцінку для середнього квадратичного відхилення $\\sigma$ генеральної сукупності.\n"
    ]
   },
   {
@@ -20,18 +20,20 @@
    "id": "fd2c006b",
    "metadata": {},
    "source": [
-    "Для розрахунку інтервальної оцінки середнього значення генеральної сукупності нам знадобиться розрахувати виборочне середнє значення:  \n",
+    "Для розрахунку інтервальної оцінки середнього квадратичного відхилення генеральної сукупності нам знадобиться розрахувати виборочне середнє значення:  \n",
     "$$\\overline X =  \\frac{1}{N} \\sum_{i=1}^{k} x_in_i$$   \n",
-    "А також дисперсія, яка розраховується за формулою:  \n",
-    "$$ D = \\frac{\\sum_{i=1}^{k} n_i(x_i - \\overline X)^2}{N} $$   \n",
-    "i стандартне відхилення:  $\\sigma = \\sqrt{D}$,   \n",
+    "А також виправлену дисперсію, яка розраховується за формулою:  \n",
+    "$$ D = \\frac{\\sum_{i=1}^{k} n_i(x_i - \\overline X)^2}{N-1} $$   \n",
+    "i стандартне відхилення:  $s = \\sqrt{D}$,   \n",
     "де k - кількість варіант, N - об'єм вибірки, тобто 20.  \n",
-    "Щоб розрахувати довірчий інтервал з надійністю 95% нам потрібно взяти відхилення $ 1.96*\\sigma/\\sqrt{N}$ в обидві сторони від  виборочного середнього значення. Коефіціент 1.96 отримуємо з таблиці Лапласа для заданої точності.\n"
+    "  \n",
+    "Щоб розрахувати довірчий інтервал для стандартного відхилення генеральної сукупності з надійністю 95% скористуємось формулою:  $$s(1-q) < \\sigma < s(1+q)$$    \n",
+    "Де q отримуємо з таблиці спираючись на значення у = 0,95 та N = 20, значення q = 0,37\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "d21b12ac",
    "metadata": {},
    "outputs": [
@@ -40,9 +42,9 @@
      "output_type": "stream",
      "text": [
       "Виборочне середнє значення дорівнює: 4.0\n",
-      "Дисперсія дорівнює: 3.0\n",
-      "Середнє квадратичне відхилення дорівнює: 1.7321\n",
-      "Довірчий інтервал, отриманий на основі виборки: [3.24, 4.76]\n"
+      "Дисперсія дорівнює: 3.16\n",
+      "Середнє квадратичне відхилення дорівнює: 1.777\n",
+      "Довірчий інтервал для стандартного відхилення: [1.12, 2.43]\n"
      ]
     }
    ],
@@ -51,23 +53,25 @@
     "x = np.array([1, 2, 4, 6, 7])\n",
     "n = np.array([2, 3, 10, 3, 2])\n",
     "N = sum(n)\n",
+    "t = 1.96\n",
+    "q = 0.37\n",
     "\n",
     "# Виборочне середнє\n",
     "X = sum(x*n)/N \n",
     "\n",
     "# Дисперсія\n",
-    "D = sum([n[i]*(x[i] - X)**2 for i in range(len(x))])/N\n",
+    "D = sum([n[i]*(x[i] - X)**2 for i in range(len(x))])/(N-1)\n",
     "\n",
     "# Стандартне відхилення\n",
     "sd = round(D**0.5, 4)\n",
     "\n",
     "# Довірчий інтервал\n",
-    "x_range = [round(X - 1.96*sd/N**0.5, 2), round(X + 1.96*sd/N**0.5, 2)] \n",
+    "sd_range = [round(sd*(1 - q), 2), round(sd*(1 + q), 2)] \n",
     "\n",
     "print(f'Виборочне середнє значення дорівнює: {X}')\n",
-    "print(f\"Дисперсія дорівнює: {D}\")\n",
+    "print(f\"Дисперсія дорівнює: {round(D, 2)}\")\n",
     "print(f'Середнє квадратичне відхилення дорівнює: {sd}') \n",
-    "print(f'Довірчий інтервал, отриманий на основі виборки: {x_range}')"
+    "print(f'Довірчий інтервал для стандартного відхилення: {sd_range}')"
    ]
   },
   {
@@ -75,7 +79,7 @@
    "id": "3d9ecee8",
    "metadata": {},
    "source": [
-    "**Висновок:** Середнє значення генеральної сукупності з ймовірністю 95% належить інтервалу [3.24, 4.76]."
+    "**Висновок:** Стандартне відхилення генеральної сукупності з ймовірністю 95% належить інтервалу [1.12 : 2.43]."
    ]
   }
  ],
