dz_28_1.ipynb was corrected.

--- a/Lesson_28/dz_28_1.ipynb
+++ b/Lesson_28/dz_28_1.ipynb
@@ -24,8 +24,8 @@
     "$$\\overline X =  \\frac{1}{N} \\sum_{i=1}^{k} x_in_i$$   \n",
     "А також виправлену дисперсію, яка розраховується за формулою:  \n",
     "$$ D = \\frac{\\sum_{i=1}^{k} n_i(x_i - \\overline X)^2}{N-1} $$   \n",
-    "i стандартне відхилення:  $s = \\sqrt{D}$,   \n",
-    "де k - кількість варіант, N - об'єм вибірки, тобто 20.  \n",
+    "де k - кількість варіант 5, N - об'єм вибірки, тобто 20.  \n",
+    "І стандартне відхилення:  $s = \\sqrt{D}$,   \n",
     "  \n",
     "Щоб розрахувати довірчий інтервал для стандартного відхилення генеральної сукупності з надійністю 95% скористуємось формулою:  $$s(1-q) < \\sigma < s(1+q)$$    \n",
     "Де q отримуємо з таблиці спираючись на значення у = 0,95 та N = 20, значення q = 0,37\n"
