dz_29_1.ipynb was corrected.

--- a/Lesson_26/dz_26_1.ipynb
+++ b/Lesson_26/dz_26_1.ipynb
@@ -27,8 +27,8 @@
     "$$ P(|X-M(X)| \\leq \\epsilon) \\geq 1 - \\frac{D(X)}{\\epsilon^2}  $$\n",
     "Відхилення e = |95 - 90| = |85 - 90| = **5**  \n",
     "Тоді  \n",
-    "Р(|Х - 90| <= 5) <= 1 - (9/5^2)  \n",
-    "P(|X - 90|) <= **0.64**\n",
+    "$Р(|Х - 90| \\leq 5) \\geq 1 - (\\frac{9}{5^2})$  \n",
+    "$P(|X - 90|) \\geq 0.64$\n",
     "\n",
     "Тобто, ймовірність того що число телевізорів які витримають гарантійний термін буде знаходиттись в межах від 85 до 95 буде більше, або дорівнювати **0.64**\n",
     "\n"
