DataFrame was corrected, cours_pass series was added.

--- a/Lesson_32/dz_32.ipynb
+++ b/Lesson_32/dz_32.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "66ff531b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "c0d832a0",
    "metadata": {},
    "outputs": [
@@ -66,138 +66,154 @@
        "      <th>avg_score</th>\n",
        "      <th>cur_score</th>\n",
        "      <th>attempts</th>\n",
+       "      <th>course_pass</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Tom</td>\n",
-       "      <td>9.9</td>\n",
+       "      <td>8.7</td>\n",
        "      <td>10</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Donald</td>\n",
-       "      <td>6.4</td>\n",
+       "      <td>7.9</td>\n",
        "      <td>8</td>\n",
        "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Kate</td>\n",
-       "      <td>5.8</td>\n",
+       "      <td>5.1</td>\n",
        "      <td>6</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Sara</td>\n",
-       "      <td>10.7</td>\n",
+       "      <td>10.9</td>\n",
        "      <td>12</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Nancy</td>\n",
-       "      <td>6.7</td>\n",
+       "      <td>5.6</td>\n",
        "      <td>7</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Nik</td>\n",
-       "      <td>5.8</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>6</td>\n",
        "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Bill</td>\n",
-       "      <td>11.1</td>\n",
+       "      <td>10.6</td>\n",
        "      <td>12</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Mary</td>\n",
-       "      <td>8.9</td>\n",
+       "      <td>10.7</td>\n",
        "      <td>11</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Bob</td>\n",
-       "      <td>8.8</td>\n",
+       "      <td>9.7</td>\n",
        "      <td>10</td>\n",
        "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Jane</td>\n",
-       "      <td>4.4</td>\n",
+       "      <td>4.2</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Jim</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>8.4</td>\n",
        "      <td>10</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Ann</td>\n",
-       "      <td>10.3</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>11</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Lis</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>7.6</td>\n",
        "      <td>9</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Bekky</td>\n",
-       "      <td>7.3</td>\n",
+       "      <td>8.1</td>\n",
        "      <td>9</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>John</td>\n",
-       "      <td>6.4</td>\n",
+       "      <td>7.5</td>\n",
        "      <td>8</td>\n",
        "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name  avg_score  cur_score  attempts\n",
-       "0      Tom        9.9         10         1\n",
-       "1   Donald        6.4          8         3\n",
-       "2     Kate        5.8          6         2\n",
-       "3     Sara       10.7         12         1\n",
-       "4    Nancy        6.7          7         2\n",
-       "5      Nik        5.8          6         3\n",
-       "6     Bill       11.1         12         1\n",
-       "7     Mary        8.9         11         1\n",
-       "8      Bob        8.8         10         3\n",
-       "9     Jane        4.4          5         3\n",
-       "10     Jim        8.0         10         2\n",
-       "11     Ann       10.3         11         1\n",
-       "12     Lis        8.0          9         2\n",
-       "13   Bekky        7.3          9         2\n",
-       "14    John        6.4          8         3"
+       "      name  avg_score  cur_score  attempts  course_pass\n",
+       "0      Tom        8.7         10         1          NaN\n",
+       "1   Donald        7.9          8         3          NaN\n",
+       "2     Kate        5.1          6         2          NaN\n",
+       "3     Sara       10.9         12         1          NaN\n",
+       "4    Nancy        5.6          7         2          NaN\n",
+       "5      Nik        6.0          6         3          NaN\n",
+       "6     Bill       10.6         12         1          NaN\n",
+       "7     Mary       10.7         11         1          NaN\n",
+       "8      Bob        9.7         10         3          NaN\n",
+       "9     Jane        4.2          5         3          NaN\n",
+       "10     Jim        8.4         10         2          NaN\n",
+       "11     Ann       11.0         11         1          NaN\n",
+       "12     Lis        7.6          9         2          NaN\n",
+       "13   Bekky        8.1          9         2          NaN\n",
+       "14    John        7.5          8         3          NaN"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,6 +221,27 @@
    "source": [
     "df = pd.read_excel('students.xlsx')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2ac820cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15, 5)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
@@ -217,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "eca2e5e8",
    "metadata": {},
    "outputs": [
@@ -253,7 +290,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Tom</td>\n",
-       "      <td>9.9</td>\n",
+       "      <td>8.7</td>\n",
        "      <td>10</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -261,7 +298,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Donald</td>\n",
-       "      <td>6.4</td>\n",
+       "      <td>7.9</td>\n",
        "      <td>8</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
@@ -269,7 +306,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Kate</td>\n",
-       "      <td>5.8</td>\n",
+       "      <td>5.1</td>\n",
        "      <td>6</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -277,7 +314,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Sara</td>\n",
-       "      <td>10.7</td>\n",
+       "      <td>10.9</td>\n",
        "      <td>12</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -285,7 +322,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Nancy</td>\n",
-       "      <td>6.7</td>\n",
+       "      <td>5.6</td>\n",
        "      <td>7</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -293,7 +330,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Nik</td>\n",
-       "      <td>5.8</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>6</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
@@ -301,7 +338,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Bill</td>\n",
-       "      <td>11.1</td>\n",
+       "      <td>10.6</td>\n",
        "      <td>12</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -309,7 +346,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Mary</td>\n",
-       "      <td>8.9</td>\n",
+       "      <td>10.7</td>\n",
        "      <td>11</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -317,7 +354,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Bob</td>\n",
-       "      <td>8.8</td>\n",
+       "      <td>9.7</td>\n",
        "      <td>10</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
@@ -325,7 +362,7 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Jane</td>\n",
-       "      <td>4.4</td>\n",
+       "      <td>4.2</td>\n",
        "      <td>5</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
@@ -333,7 +370,7 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Jim</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>8.4</td>\n",
        "      <td>10</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -341,7 +378,7 @@
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Ann</td>\n",
-       "      <td>10.3</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>11</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -349,7 +386,7 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Lis</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>7.6</td>\n",
        "      <td>9</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -357,7 +394,7 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Bekky</td>\n",
-       "      <td>7.3</td>\n",
+       "      <td>8.1</td>\n",
        "      <td>9</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
@@ -365,7 +402,7 @@
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>John</td>\n",
-       "      <td>6.4</td>\n",
+       "      <td>7.5</td>\n",
        "      <td>8</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
@@ -376,24 +413,24 @@
       ],
       "text/plain": [
        "      name  avg_score  cur_score  attempts  course_pass\n",
-       "0      Tom        9.9         10         1            1\n",
-       "1   Donald        6.4          8         3            1\n",
-       "2     Kate        5.8          6         2            1\n",
-       "3     Sara       10.7         12         1            1\n",
-       "4    Nancy        6.7          7         2            1\n",
-       "5      Nik        5.8          6         3            1\n",
-       "6     Bill       11.1         12         1            1\n",
-       "7     Mary        8.9         11         1            1\n",
-       "8      Bob        8.8         10         3            1\n",
-       "9     Jane        4.4          5         3            0\n",
-       "10     Jim        8.0         10         2            1\n",
-       "11     Ann       10.3         11         1            1\n",
-       "12     Lis        8.0          9         2            1\n",
-       "13   Bekky        7.3          9         2            1\n",
-       "14    John        6.4          8         3            1"
+       "0      Tom        8.7         10         1            1\n",
+       "1   Donald        7.9          8         3            1\n",
+       "2     Kate        5.1          6         2            1\n",
+       "3     Sara       10.9         12         1            1\n",
+       "4    Nancy        5.6          7         2            1\n",
+       "5      Nik        6.0          6         3            1\n",
+       "6     Bill       10.6         12         1            1\n",
+       "7     Mary       10.7         11         1            1\n",
+       "8      Bob        9.7         10         3            1\n",
+       "9     Jane        4.2          5         3            0\n",
+       "10     Jim        8.4         10         2            1\n",
+       "11     Ann       11.0         11         1            1\n",
+       "12     Lis        7.6          9         2            1\n",
+       "13   Bekky        8.1          9         2            1\n",
+       "14    John        7.5          8         3            1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,21 +453,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "e42dc35b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "max       11.1\n",
-       "min        4.4\n",
-       "mean       7.9\n",
-       "median     8.0\n",
+       "max       11.000000\n",
+       "min        4.200000\n",
+       "mean       8.133333\n",
+       "median     8.100000\n",
        "Name: avg_score, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "49393966",
    "metadata": {},
    "outputs": [
@@ -476,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "93892562",
    "metadata": {},
    "outputs": [
@@ -508,7 +545,7 @@
        "Name: attempts, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
