Summary was edited.

--- a/Lesson_35/dz_35_1.ipynb
+++ b/Lesson_35/dz_35_1.ipynb
@@ -320,7 +320,8 @@
    "metadata": {},
    "source": [
     "**Сердня помилка побудованої моделі mae = 4.97 і корінь із средньої квадратичної похибки rmse = 5.37 \n",
-    "достатньо близькі і відносно невиликі, що додатково свідчить про прийнятну якість побудованої моделі лінійної регресії.**"
+    "достатньо близькі і відносно невиликі, що додатково свідчить про прийнятну якість побудованої моделі лінійної регресії.  \n",
+    "Для покращення моделі можливо треба ввести додатковий параметр $\\epsilon$ щоб додати варіативності прогнозним значенням.**"
    ]
   }
  ],
